changing server ports to heroku

--- a/js/main/main.css
+++ b/js/main/main.css
@@ -3,7 +3,7 @@
 }
 
 html {
-	background-image: url('/assets/index.jpg');
+	background-image: url('../../assets/index.jpg');
 	background-repeat: no-repeat;
 	background-position: center center;
 	background-size: cover;
